Logica JavaScript terminada

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <h1>MOKEPON 🔥💧🌱 </h1>
      
      <section  id="seleccionar-mascota">
-        <h2>Elige a tu mascota</h2>
+        <h2>Elige tu mascota</h2>
 
         <label for="hipodoge">Hipodoge</label>
         <input type="radio" name="mascota" id="hipodoge">
@@ -37,23 +37,19 @@
      <section id="seleccionar-ataque">
         <h2>Elige tu ataque: </h2>
 
-        <p>Tu mascota <span id="mascota-jugador"></span> tiene <span>3</span> vidas</p>
-        <p>La mascota <spanid id="mascota-enemigo"></spanid> de tu enemigo tiene <span>3</span> vidas</p>
-     </section>
-  
-  
-     <section id="mensajes">
-        <p>Tú mascota atacó con FUEGO, la mascota del enemigo atacó con Agua, ¡GANASTE!</p>
-
+        <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vida-jugador">3</span> vidas</p>
+        <p>La mascota <spanid id="mascota-enemigo"></spanid> de tu enemigo tiene <span id="vida-enemigo">3</span> vidas</p>
      </section>
 
      <p>
         <button id="boton-fuego">Fuego 🔥</button>
-        <button id="boton-mascota">Agua 💧</button>
-        <button id="boton-mascota">Tierra 🌱</button>
+        <button id="boton-agua">Agua 💧</button>
+        <button id="boton-tierra">Tierra 🌱</button>
      </p>
      
-     <section id="reiniciar">
+     <section id="mensajes"></section>
+
+     <section id="boton-reiniciar">
         <button>Reiniciar</button>
      </section>
 
