Funcionalidad completada en JS

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
      
      <section id="mensajes"></section>
 
-     <section id="boton-reiniciar">
+     <section id="reiniciar">
         <button>Reiniciar</button>
      </section>
 
