Iniciando los estilos

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <title>MOKEPON!</title>
+    <link rel="stylesheet" href="./styles.css">
     <script src="./js/codigo.js"></script>
 </head>
 <body>
-     <h1>MOKEPON 🔥💧🌱 </h1>
+     <h1 class="titulo">MOKEPON 🔥💧🌱 </h1>
      
      <section  id="seleccionar-mascota">
         <h2>Elige tu mascota</h2>
@@ -39,13 +40,13 @@
 
         <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vida-jugador">3</span> vidas</p>
         <p>La mascota <spanid id="mascota-enemigo"></spanid> de tu enemigo tiene <span id="vida-enemigo">3</span> vidas</p>
+        <p>
+           <button id="boton-fuego">Fuego 🔥</button>
+           <button id="boton-agua">Agua 💧</button>
+           <button id="boton-tierra">Tierra 🌱</button>
+        </p>
      </section>
 
-     <p>
-        <button id="boton-fuego">Fuego 🔥</button>
-        <button id="boton-agua">Agua 💧</button>
-        <button id="boton-tierra">Tierra 🌱</button>
-     </p>
      
      <section id="mensajes"></section>
 
