--- a/index.html
+++ b/index.html
@@ -6,53 +6,64 @@
     <script src="./js/codigo.js"></script>
 </head>
 <body>
-     <h1 class="titulo">MOKEPON 🔥💧🌱 </h1>
-     
-     <section  id="seleccionar-mascota">
-        <h2>Elige tu mascota</h2>
 
-        <label for="hipodoge">Hipodoge</label>
-        <input type="radio" name="mascota" id="hipodoge">
+   <section  id="seleccionar-mascota">
+      <h1 class="titulo">Mokepon</h1>
 
-        <label for="capipepo">Capipepo</label>
-        <input type="radio" name="mascota"  id="capipepo">
+      <h2 class="subtitulo">Elige tu mascota</h2>
 
-        <label for="ratigueya">Ratigueya</label>
-        <input type="radio" name="mascota" id="ratigueya">
+      <div class="tarjetas">
 
-        <label for="langostelvis">Langostelvis</label>
-        <input type="radio" name="mascota" id="langostelvis">
+         <label class="tarjeta-de-mokepon" for="hipodoge" >
+            <p>Hipodoge</p>
+            <img src="./assets/mokepons_mokepon_hipodoge_attack.png" alt="Imagen de Hipodoge">
+         </label>
 
-        <label for="tucapalma">Tucapalma</label>
-        <input type="radio" name="mascota" id="tucapalma">
+         <input type="radio" name="mascota" id="hipodoge">
+   
+         <label class="tarjeta-de-mokepon" for="capipepo">Capipepo</label>
+         <input type="radio" name="mascota"  id="capipepo">
+   
+         <label class="tarjeta-de-mokepon" for="ratigueya">Ratigueya</label>
+         <input type="radio" name="mascota" id="ratigueya">
+   
+         <label class="tarjeta-de-mokepon" for="langostelvis">Langostelvis</label>
+         <input type="radio" name="mascota" id="langostelvis">
+   
+         <label class="tarjeta-de-mokepon" for="tucapalma">Tucapalma</label>
+         <input type="radio" name="mascota" id="tucapalma">
+   
+         <label class="tarjeta-de-mokepon" for="pydos">Pydos</label>
+         <input type="radio" name="mascota" id="pydos">
+   
+         <button id="boton-mascota" >Seleccionar</button>
+      </div>
 
-        <label for="pydos">Pydos</label>
-        <input type="radio" name="mascota" id="pydos">
-
-        <button id="boton-mascota" >Seleccionar</button>
+   </section>
 
 
-     </section>
+   <section id="seleccionar-ataque">
 
+      <h1 class="titulo">MOKEPON 🔥💧🌱 </h1>
 
-     <section id="seleccionar-ataque">
-        <h2>Elige tu ataque: </h2>
+      <h2>Elige tu ataque: </h2>
 
-        <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vida-jugador">3</span> vidas</p>
-        <p>La mascota <spanid id="mascota-enemigo"></spanid> de tu enemigo tiene <span id="vida-enemigo">3</span> vidas</p>
-        <p>
-           <button id="boton-fuego">Fuego 🔥</button>
-           <button id="boton-agua">Agua 💧</button>
-           <button id="boton-tierra">Tierra 🌱</button>
-        </p>
-     </section>
+      <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vida-jugador">3</span> vidas</p>
+      <p>La mascota <spanid id="mascota-enemigo"></spanid> de tu enemigo tiene <span id="vida-enemigo">3</span> vidas</p>
+      <p>
+         <button id="boton-fuego">Fuego 🔥</button>
+         <button id="boton-agua">Agua 💧</button>
+         <button id="boton-tierra">Tierra 🌱</button>
+      </p>
 
-     
-     <section id="mensajes"></section>
+   </section>
 
-     <section id="reiniciar">
-        <button>Reiniciar</button>
-     </section>
+   
+   <section id="mensajes"></section>
+
+   <section id="reiniciar">
+      <button>Reiniciar</button>
+   </section>
 
 </body>
 </html>
