Modificación de la seccion mensajes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
 
       <div>
-         <section id="mensajes"></section>
+         <div id="resultado-combate"></div>
 
          <section id="reiniciar">
             <button>Reiniciar</button>
