Se modifica funcion crearMensaje

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
 
       <div>
-         <div id="resultado-combate"></div>
+         <p id="resultado-combate"></p>
 
          <section id="reiniciar">
             <button>Reiniciar</button>
