Manipulando DOM con iteradores, Una fuente de verdad

--- a/index.html
+++ b/index.html
@@ -11,36 +11,8 @@
 
       <h2 class="subtitulo">Elige tu mascota</h2>
 
-      <div class="tarjetas">
 
-         <input type="radio" name="mascota" id="hipodoge">
-         <label class="tarjeta-de-mokepon" for="hipodoge" >
-            <p>Hipodoge</p>
-            <img src="./assets/mokepons_mokepon_hipodoge_attack.png" alt="Imagen de Hipodoge">
-         </label>
-
-
-         <input type="radio" name="mascota"  id="capipepo">
-         <label class="tarjeta-de-mokepon" for="capipepo">
-            <p>Capipepo</p>
-            <img src="./assets/mokepons_mokepon_capipepo_attack.png" alt="Imagen de Capipepo">
-         </label>
-
-         <input type="radio" name="mascota" id="ratigueya">
-         <label class="tarjeta-de-mokepon" for="ratigueya">
-            <p>Ratigüeya</p>
-            <img src="./assets/mokepons_mokepon_ratigueya_attack.png" alt="Imagen de Ratigüeya">
-         </label>
-
-   
-         <!-- <label class="tarjeta-de-mokepon" for="langostelvis">Langostelvis</label>
-         <input type="radio" name="mascota" id="langostelvis">
-   
-         <label class="tarjeta-de-mokepon" for="tucapalma">Tucapalma</label>
-         <input type="radio" name="mascota" id="tucapalma">
-   
-         <label class="tarjeta-de-mokepon" for="pydos">Pydos</label>
-         <input type="radio" name="mascota" id="pydos"> -->
+      <div id= 'contenedor-tarjetas' class="tarjetas">
    
       </div>
 
