se agregan nuevas imagees a project bluey

--- a/blueyProject/bluey.html
+++ b/blueyProject/bluey.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./bluey.css">
-    <title>Pare o None</title>
+    <title>Par o Impar</title>
 </head>
 <body>
 
@@ -27,19 +27,17 @@
 
             <label class="tarjeta-personaje" for="Bingo">
                 <p>Bingo</p>
-                <img src="./assetsBluey/bingo-personaje.png" alt="Bingo">
+                <img src="./assetsBluey/bingo2.png" alt="Bingo">
                 
             </label>
-
-
-
         </div>
 
+        <div class="mensaje">Seleccionaste a <span id ='nombre-personaje'>...</span></div>
 
-
+        <button id="boton-personaje">Seleccionar</button>
     </section>
 
-    <section id="seleccionar-numero">
+    <section id="seleccionar-jugada">
 
     </section>
 
