--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 
    </section>
 
+   <section id="ver-mapa">
+      <h1 class="titulo">Recorre el mapa con tu Mokepon</h1>
+      <canvas id="mapa"></canvas>
+      <button onmouseup = "detenerMovimiento()"  onmousedown="moverArriba()">Arriba</button>
+      <button onmouseup = "detenerMovimiento()"  onmousedown="moverAbajo()">Abajo</button>
+      <button onmouseup = "detenerMovimiento()"  onmousedown="moverIzquierda()">Izquierda</button>
+      <button onmouseup = "detenerMovimiento()"  onmousedown="moverDerecha()">Derecha</button>
+
+   </section>
+
 
    <section id="seleccionar-ataque">
 
