optimizando el codigo para subit a github pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <h1 class="titulo">MOKEPON 🔥💧🌱 </h1>
 
-      <h2 class="subtitulo">Elige tu ataque</h2>
+      <h2 class="subtitulo">Elige tus 5 ataques en el orden que desees.</h2>
 
       <div id ='contenedor-ataques' class="tarjetas-ataques">
          <!-- <button id="boton-fuego" class="boton-de-ataque">Fuego 🔥</button>
